new update with colors imrovements and bug fixes

--- a/components/footer.html
+++ b/components/footer.html
@@ -14,15 +14,8 @@
   <div class="footer-card border rounded-4 shadow p-4 p-md-5 glass">
     <div class="footer-top">
       <div class="footer-brand">
-        <a href="/mindora/index.html" class="footer-brand-title navbar-brand mb-2">
-          <span class="brand-mark" aria-hidden="true">
-            <svg viewBox="0 0 32 32" width="24" height="24" fill="none">
-              <circle cx="16" cy="16" r="14" class="logo-ring"></circle>
-              <path d="M16 6c4 4 4 6 0 10-4-4-4-6 0-10Zm0 0c-6 6-6 10 0 16 6-6 6-10 0-16Z" class="logo-lotus"></path>
-            </svg>
-          </span>
-          <span class="fw-bold brand-text">Mindora</span>
-        </a>
+        <a href="./index.html" class="footer-brand-title navbar-brand mb-2">
+          <img width="140px" src="../assets/img/logo/logo.png" alt="Mindora"></a>
         <p class="text-muted">Healthy mind through aerobics, breathing, and meditation.</p>
         <div class="footer-social">
           <a href="https://twitter.com" target="_blank" rel="noopener" class="btn btn-outline-secondary btn-sm rounded-circle" aria-label="Twitter"><i class="bi bi-twitter-x"></i></a>
@@ -35,17 +28,17 @@
         <div class="link-col">
           <h6 class="text-uppercase text-muted">Explore</h6>
           <ul class="list-unstyled">
-            <li><a class="text-decoration-none" href="/mindora/pages/poses.html">Poses</a></li>
-            <li><a class="text-decoration-none" href="/mindora/pages/courses.html">Courses</a></li>
-            <li><a class="text-decoration-none" href="/mindora/pages/meditation.html">Meditation</a></li>
-            <li><a class="text-decoration-none" href="/mindora/pages/videos.html">Videos</a></li>
-            <li><a class="text-decoration-none" href="/mindora/pages/books.html">Books</a></li>
+            <li><a class="text-decoration-none" href="./pages/poses.html">Poses</a></li>
+            <li><a class="text-decoration-none" href="./pages/courses.html">Courses</a></li>
+            <li><a class="text-decoration-none" href="./pages/meditation.html">Meditation</a></li>
+            <li><a class="text-decoration-none" href="./pages/videos.html">Videos</a></li>
+            <li><a class="text-decoration-none" href="./pages/books.html">Books</a></li>
           </ul>
         </div>
         <div class="link-col">
           <h6 class="text-uppercase text-muted">Resources</h6>
           <ul class="list-unstyled">
-            <li><a class="text-decoration-none" href="/mindora/pages/blog.html">Blog</a></li>
+            <li><a class="text-decoration-none" href="./pages/blog.html">Blog</a></li>
             <li><a class="text-decoration-none" href="#">Guides</a></li>
             <li><a class="text-decoration-none" href="#">Community</a></li>
             <li><a class="text-decoration-none" href="#">Support</a></li>
