--- a/components/header.html
+++ b/components/header.html
@@ -18,18 +18,20 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="../pages/poses.html" id="posesMenu" role="button" data-bs-toggle="dropdown" aria-expanded="false">Poses</a>
             <ul class="dropdown-menu" aria-labelledby="posesMenu">
-              <li><a class="dropdown-item" href="../pages/poses.html#poses-by-type">Poses by type</a></li>
-              <li><a class="dropdown-item" href="../pages/poses.html#poses-by-benefit">Poses by benefit</a></li>
-              <li><a class="dropdown-item" href="../pages/poses.html#poses-general">Poses general</a></li>
-              <li><a class="dropdown-item" href="../pages/poses.html#poses-by-anatomy">Poses by anatomy</a></li>  
+              <li><a class="dropdown-item" href="./pages/poses.html#poses-by-type">Poses by type</a></li>
+              <li><a class="dropdown-item" href="./pages/poses.html#poses-by-benefit">Poses by benefit</a></li>
+              <li><a class="dropdown-item" href="./pages/poses.html#poses-general">Poses general</a></li>
+              <li><a class="dropdown-item" href="./pages/poses.html#poses-by-anatomy">Poses by anatomy</a></li>  
             </ul>
           </li>
-          <li class="nav-item"><a class="nav-link" href="../pages/courses.html">Courses</a></li>
-          <li class="nav-item"><a class="nav-link" href="../pages/meditation.html">Meditation</a></li>
-          <li class="nav-item"><a class="nav-link" href="../pages/videos.html">Videos</a></li>
-          <li class="nav-item"><a class="nav-link" href="../pages/books.html">Books</a></li>  
-          <li class="nav-item"><a class="nav-link" href="../pages/blog.html">Blog</a></li>
-          <li class="nav-item"><a class="nav-link" href="../pages/categories.html">Categories</a></li>
+          <li class="nav-item"><a class="nav-link" href="./pages/courses.html">Courses</a></li>
+          <li class="nav-item"><a class="nav-link" href="./pages/meditation.html">Meditation</a></li>
+          <li class="nav-item"><a class="nav-link" href="
+            
+            ./pages/videos.html">Videos</a></li>
+          <li class="nav-item"><a class="nav-link" href="./pages/books.html">Books</a></li>  
+          <li class="nav-item"><a class="nav-link" href="./pages/blog.html">Blog</a></li>
+          <li class="nav-item"><a class="nav-link" href="./pages/categories.html">Categories</a></li>
         </ul>
         <div id="authArea" class="d-flex gap-2">
           <button class="btn btn-outline-secondary rounded-pill" data-open="login">Login</button>
