--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ body {
 
 body {
   font-family: var(--font-body);
-  background-image: url(../assets/img/background/bg2.png);
+  background-image: #ededed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
